--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.10",
+    "@cds/core": "^6.13.0",
+    "@clr/angular": "^17.3.1",
+    "@clr/ui": "^17.3.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
